Introduction Panel, missing css typing animation

--- a/src/Styles/_vars.scss
+++ b/src/Styles/_vars.scss
@@ -5,3 +5,7 @@ $tertiary-white: #e1e1e1;
 $primary-black: #000000;
 $secondary-black: #141414;
 $tertiary-black: #1b1b1b;
+
+$primary-grey: #aaaaaa;
+$secondary-grey: #bdbdbd;
+$tertiary-grey: #d2d2d2;
